add payment charge api
