# api/jester/internal/gen/server.gen.go
@@ -27,6 +27,9 @@ type ServerInterface interface {
 	// Create new credit card
 	// (POST /v1/payments/cards)
 	CreateCreditCard(c *gin.Context)
+	// Create new charge
+	// (POST /v1/payments/charges)
+	CreateCharge(c *gin.Context)
 	// Create new reservation
 	// (POST /v1/payments/reservations)
 	CreateReservation(c *gin.Context)
@@ -115,6 +118,21 @@ func (siw *ServerInterfaceWrapper) CreateCreditCard(c *gin.Context) {
 	}
 
 	siw.Handler.CreateCreditCard(c)
+}
+
+// CreateCharge operation middleware
+func (siw *ServerInterfaceWrapper) CreateCharge(c *gin.Context) {
+
+	c.Set(BearerAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.CreateCharge(c)
 }
 
 // CreateReservation operation middleware
@@ -285,6 +303,7 @@ func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options
 	router.DELETE(options.BaseURL+"/v1/payments/cards", wrapper.DeleteCreditCard)
 	router.GET(options.BaseURL+"/v1/payments/cards", wrapper.GetCreditCards)
 	router.POST(options.BaseURL+"/v1/payments/cards", wrapper.CreateCreditCard)
+	router.POST(options.BaseURL+"/v1/payments/charges", wrapper.CreateCharge)
 	router.POST(options.BaseURL+"/v1/payments/reservations", wrapper.CreateReservation)
 	router.GET(options.BaseURL+"/v1/products", wrapper.GetProducts)
 	router.GET(options.BaseURL+"/v1/products/:productID", wrapper.GetProductByID)
@@ -441,6 +460,43 @@ func (response CreateCreditCard401Response) VisitCreateCreditCardResponse(w http
 type CreateCreditCard500Response = InternalServerErrorResponse
 
 func (response CreateCreditCard500Response) VisitCreateCreditCardResponse(w http.ResponseWriter) error {
+	w.WriteHeader(500)
+	return nil
+}
+
+type CreateChargeRequestObject struct {
+	Body *CreateChargeJSONRequestBody
+}
+
+type CreateChargeResponseObject interface {
+	VisitCreateChargeResponse(w http.ResponseWriter) error
+}
+
+type CreateCharge204Response struct {
+}
+
+func (response CreateCharge204Response) VisitCreateChargeResponse(w http.ResponseWriter) error {
+	w.WriteHeader(204)
+	return nil
+}
+
+type CreateCharge400Response = BadRequestResponse
+
+func (response CreateCharge400Response) VisitCreateChargeResponse(w http.ResponseWriter) error {
+	w.WriteHeader(400)
+	return nil
+}
+
+type CreateCharge401Response = UnauthorizedResponse
+
+func (response CreateCharge401Response) VisitCreateChargeResponse(w http.ResponseWriter) error {
+	w.WriteHeader(401)
+	return nil
+}
+
+type CreateCharge500Response = InternalServerErrorResponse
+
+func (response CreateCharge500Response) VisitCreateChargeResponse(w http.ResponseWriter) error {
 	w.WriteHeader(500)
 	return nil
 }
@@ -729,6 +785,9 @@ type StrictServerInterface interface {
 	// Create new credit card
 	// (POST /v1/payments/cards)
 	CreateCreditCard(ctx *gin.Context, request CreateCreditCardRequestObject) (CreateCreditCardResponseObject, error)
+	// Create new charge
+	// (POST /v1/payments/charges)
+	CreateCharge(ctx *gin.Context, request CreateChargeRequestObject) (CreateChargeResponseObject, error)
 	// Create new reservation
 	// (POST /v1/payments/reservations)
 	CreateReservation(ctx *gin.Context, request CreateReservationRequestObject) (CreateReservationResponseObject, error)
@@ -865,6 +924,39 @@ func (sh *strictHandler) CreateCreditCard(ctx *gin.Context) {
 		ctx.Status(http.StatusInternalServerError)
 	} else if validResponse, ok := response.(CreateCreditCardResponseObject); ok {
 		if err := validResponse.VisitCreateCreditCardResponse(ctx.Writer); err != nil {
+			ctx.Error(err)
+		}
+	} else if response != nil {
+		ctx.Error(fmt.Errorf("unexpected response type: %T", response))
+	}
+}
+
+// CreateCharge operation middleware
+func (sh *strictHandler) CreateCharge(ctx *gin.Context) {
+	var request CreateChargeRequestObject
+
+	var body CreateChargeJSONRequestBody
+	if err := ctx.ShouldBind(&body); err != nil {
+		ctx.Status(http.StatusBadRequest)
+		ctx.Error(err)
+		return
+	}
+	request.Body = &body
+
+	handler := func(ctx *gin.Context, request interface{}) (interface{}, error) {
+		return sh.ssi.CreateCharge(ctx, request.(CreateChargeRequestObject))
+	}
+	for _, middleware := range sh.middlewares {
+		handler = middleware(handler, "CreateCharge")
+	}
+
+	response, err := handler(ctx, request)
+
+	if err != nil {
+		ctx.Error(err)
+		ctx.Status(http.StatusInternalServerError)
+	} else if validResponse, ok := response.(CreateChargeResponseObject); ok {
+		if err := validResponse.VisitCreateChargeResponse(ctx.Writer); err != nil {
 			ctx.Error(err)
 		}
 	} else if response != nil {
